--- a/templates/mail/messagesListTemplate.html
+++ b/templates/mail/messagesListTemplate.html
@@ -1,5 +1,4 @@
-
-<h2 class="ellipsis50"><%=folderID%></h2>
+<h2 class="ellipsis50"><%=currentFolder.get("folderName")%></h2>
 <div class="searchArea">
   <input id="searchField" type="text" value="" placeholder="Procurar Por:" />
 </div>
@@ -15,4 +14,3 @@
 	</div>
   </div>
 </div>
-
