--- a/templates/login/loginTemplate.html
+++ b/templates/login/loginTemplate.html
@@ -5,6 +5,9 @@
       <div id="loadingLogin" style="width: 100%; min-height: 150px;">
             <select id="serverURL" name="serverURL" class="login-input" >
                   <option value="http://api.expresso.pr.gov.br">expresso.pr.gov.br</option>
+                  <option value="http://expresso.rafaelgobara.api.expressodev.celepar.parana">expresso.rafaelgobara.api.expressodev.celepar.parana</option>
+                  <option value="http://api.master.expresso.celepar.parana">api.master.expresso.celepar.parana</option>
+                  <option value="http://api.expresso.celepar.parana">api.expresso.celepar.parana</option>
                   <option value="http://demo.expressolivre.org/api/rest/">demo.expressolivre.org</option>
             </select>
             <input id="username" type="username" name="username" class="login-input" value="" placeholder="Usuário" autofocus>
