--- a/templates/home/contextMenuTemplate.html
+++ b/templates/home/contextMenuTemplate.html
@@ -8,7 +8,7 @@
 	<ul>
 		<% _.each(menuItems, function(menuItem){ %>
 			<% if (!menuItem.get("primary")) { %>
-				<li><a href="<%=menuItem.get("route")%>" title="<%=menuItem.get("title")%>"><%=menuItem.get("title")%></a></li>
+				<li><a href="<%=menuItem.get("route")%>" title="<%=menuItem.get("title")%>"><div class="context-icon <%=menuItem.get("iconClass")%>"></div><%=menuItem.get("title")%></a></li>
 			<% } %>
 		<% }); %>
 	</ul>
